k8s/pingfederate/engine/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingfederate
  labels:
    app: pingfederate
    tier: engine
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pingfederate
      tier: engine
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: pingfederate
        tier: engine
        version: "0.1"
    spec:
      containers:
      - name: pingfederate
        image: pingidentity/pingfederate:10.0.0
        ports:
        - name: runtime
          containerPort: 9031
        readinessProbe:
          httpGet:
            path: /pf/heartbeat.ping
            port: 9031
            scheme: HTTPS
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /pf/heartbeat.ping
            port: 9031
            scheme: HTTPS
          periodSeconds: 1
          initialDelaySeconds: 150
          failureThreshold: 1
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","sleep 20"]
        resources:
          requests:
            memory: 2.5Gi
            cpu: "2"
          limits:
            memory: 2.5Gi
            cpu: "2"
