k8s/pingfederate/engine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingfederate
  namespace: anydevops
  labels:
    app: pingfederate
    tier: engine
spec:
  ports:
    #NOTE: external port is 443 now
  - port: 443
    protocol: TCP
    targetPort: 9031
  selector:
    app: pingfederate
    tier: engine
  sessionAffinity: None
  # type: LoadBalancer
